--- a/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -415,7 +415,7 @@
       "metadata": {
         "id": "M8Vqi-pPk-HR"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,7 +441,7 @@
         },
         "outputId": "b9de1e39-78b4-46a8-aa99-d30f39693ff7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
       "metadata": {
         "id": "TOIHJO4jgr0-"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -486,7 +486,7 @@
         },
         "outputId": "9452477d-1566-4590-a5eb-6d2e6a38a04b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -859,7 +859,7 @@
         },
         "outputId": "34352737-93ba-44e4-cc2a-87edff120bf2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,6 +885,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Detaset Statistics\n",
         "data.describe()"
       ],
       "metadata": {
@@ -895,7 +896,7 @@
         "id": "uAm7qvOwo9gZ",
         "outputId": "9b4848eb-68a8-4527-d553-6de5d653c7ac"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1344,6 +1345,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**As there are no missing values / null values in the dataset, we cannot visialise them.**"
+      ],
+      "metadata": {
+        "id": "D3BNNlfvFcOc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### What did you know about your dataset?"
       ],
       "metadata": {
@@ -1353,7 +1363,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "### Insights from the info() method -\n",
+        "*   The DataFrame has no missing values (nulls) in any of the columns, which means we don't to treat missing values.\n",
+        "*   The \"Date column\" contains data in an object format, which suggests it might need to be converted to a datetime format for analysis.\n",
+        "*   The other columns (Open, High, Low, Close) are numerical which are suitable for stock price analysis.\n",
+        "\n",
+        "### Insights from the describe() method -\n",
+        "*   The data for all columns showing a wide range, and standard deviation is also high which means there is high valatility in the prices.\n",
+        "*   As the mean is higher than the median for all columns, which suggest a skew in the data distribution."
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
