--- a/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -3963,7 +3963,7 @@
         "id": "V22bRsFWp1cl"
       },
       "source": [
-        "To check the Price distribution over months"
+        "To check the Price distribution over months."
       ]
     },
     {
@@ -3981,7 +3981,10 @@
         "id": "ozQPc2_Ip1cl"
       },
       "source": [
-        "Answer Here"
+        "We can see,\n",
+        "*   The price is lower in the month of September, October and November.\n",
+        "*   Closing price is higher in the months of March, april and May.\n",
+        "\n"
       ]
     },
     {
@@ -4000,7 +4003,8 @@
         "id": "GL8l1tdLp1cl"
       },
       "source": [
-        "Answer Here"
+        "*   May be the public sentiments is making prices go high and low during this specific months.\n",
+        "*   Decision on Investing in the stock can be taken using the above info."
       ]
     },
     {
